# serwant

./: HLint.hs  LICENSE  serwant.cabal  stack.yaml
app/: Main.hs
src/: ApiTypes.hs  Lib.hs  MyPrelude.hs
src/Api/: Post.hs  User.hs
src/Type/: CreatePost.hs  Post.hs  PostError.hs  Range.hs  Reason.hs  ToServantErr.hs  User.hs  UserInfo.hs  UserPost.hs  UserSignupError.hs
