name:                serwant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bergmark/serwant#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  ghc-options:       -Wall
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    TypeOperators
  other-modules:
    Api.Post
    Api.User
    ApiTypes
    MyPrelude
    Type.CreatePost
    Type.Post
    Type.PostError
    Type.Range
    Type.Reason
    Type.ToServantErr
    Type.User
    Type.UserInfo
    Type.UserPost
    Type.UserSignupError
  exposed-modules:
    Lib
  default-language:  Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson >= 0.7 && < 1.3
    , base-compat >= 0.8 && < 0.10
    , bytestring >= 0.9 && < 0.11
    , containers >= 0.3 && < 0.6
    , generic-aeson == 0.2.*
    , json-schema >= 0.6 && < 0.8
    , mtl >= 2.0 && < 2.3
    , mtl-compat
    , safe >= 0.2 && < 0.4
    , transformers >= 0.2 && < 0.6
    , transformers-compat >= 0.4 && < 0.7
    , stm >= 2.1 && < 2.5
    , text >= 0.11 && < 1.3
    , time >= 1.1 && < 1.9
    , unordered-containers == 0.2.*
    , servant-server >= 0.12
    , string-conversions
    , wai
    , warp

executable serwant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
      base
    , serwant

test-suite serwant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
      base
    , serwant

source-repository head
  type:     git
  location: https://github.com/bergmark/serwant
